--- a/assets/css/module-css/banner.css
+++ b/assets/css/module-css/banner.css
@@ -22,9 +22,9 @@
 }
 
 .banner-section .content-box h2{
-  font-size: 72px;
+  font-size: 60px;
   line-height: 79px;
-  color: #fff;
+  color: #000;
   max-width: 930px;
   margin: 0 auto;
   margin-bottom: 24px;
@@ -33,7 +33,7 @@
 .banner-section .content-box p{
   font-size: 20px;
   line-height: 32px;
-  color: #fff;
+  color: #000;
   max-width: 720px;
   margin: 0 auto;
   margin-bottom: 40px;
@@ -64,11 +64,12 @@
 .banner-section .content-box .btn-box .theme-btn.btn-one:hover,
 .banner-section .content-box .btn-box .theme-btn.btn-one:before,
 .banner-section .content-box .btn-box .theme-btn.btn-one:after{
-  background: #fff;
+  background: var(--secondary-color);
+  color: #fff;
 }
 
 .banner-section .content-box .btn-box .theme-btn.btn-one:hover{
-  color: var(--title-color) !important;
+  color: #fff;
 }
 
 .banner-section .author-box{
@@ -93,6 +94,8 @@
   border-radius: 50%;
   -webkit-animation: zoom-fade 4s infinite linear;
   animation: zoom-fade 4s infinite linear;
+  opacity: 0.5;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .banner-section .author-box .author span{
@@ -724,11 +727,70 @@
   }
 }
 
-@media only screen and (max-width: 1200px){
-  .banner-section .author-box{
-    display: none;
+@media only screen and (max-width: 1000px){
+  /*.banner-section .author-box{
+    display: block;
+  }*/
+  .banner-section .author-box .author-1{
+    left: 130px;
+    top: 180px;
+  }
+
+  .banner-section .author-box .author-2{
+    left: 250px;
+    top: 420px;
+  }
+
+  .banner-section .author-box .author-3{
+    left: 190px;
+    bottom: 200px;
+  }
+
+  .banner-section .author-box .author-4{
+    position: absolute;
+    top: 200px;
+    right: 200px;
+  }
+
+  .banner-section .author-box .author-5{
+    position: absolute;
+    top: 450px;
+    right: 340px;
+  }
+
+  .banner-section .author-box .author-6{
+    position: absolute;
+    bottom: 170px;
+    right: 120px;
+  }
+
+  .banner-section .author-box .author-7{
+    position: absolute;
+    bottom: 50px;
+    right: 620px;
   }
 }
+
+ /* Responsive styles for screens up to 768px */
+    @media only screen and (max-width: 768px) {
+      .banner-section .author-box .author-1 { left: 100px; top: 150px; }
+      .banner-section .author-box .author-2 { left: 220px; bottom: 0px; d}
+      .banner-section .author-box .author-3 { left: 10px; bottom: 180px; }
+      .banner-section .author-box .author-4 { top: 180px; right: 150px;display:none; }
+      .banner-section .author-box .author-5 { bottom: 100px; right: 80px; display: none;}
+      .banner-section .author-box .author-6 { top: 250px; right: 0px; }
+      .banner-section .author-box .author-7 { bottom: 40px; right: 550px; display: none;}
+    }
+/* Responsive styles for screens up to 480px */
+    @media only screen and (max-width: 480px) {
+      .banner-section .author-box .author-1 { left: 50px; top: 120px; }
+      .banner-section .author-box .author-2 { left: 180px; top: 300px; display: none;}
+      .banner-section .author-box .author-3 { left: 50px; bottom: 100px; }
+      .banner-section .author-box .author-4 { top: 150px; right: 80px;display:none; }
+      .banner-section .author-box .author-5 { top: 350px; right: 200px; display: none;}
+      .banner-section .author-box .author-6 { bottom: 50px; right: 0px; }
+      .banner-section .author-box .author-7 { bottom: 0px; right:0px;display: none;}
+    }
 
 @media only screen and (max-width: 991px){
   .banner-style-two .outer-container{
@@ -833,7 +895,7 @@
 
   .banner-section .content-box .btn-box .theme-btn.btn-one{
     margin-right: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
   }
 
   .rtl .banner-section .content-box .btn-box .theme-btn.btn-one{
@@ -853,6 +915,10 @@
     margin-right: 0px;
     margin-bottom: 20px;
     margin-left: 0px !important;
+  }
+   .banner-section .content-box h2{
+    font-size: 33px;
+    line-height: 40px;
   }
 }
 
