--- a/assets/css/module-css/footer.css
+++ b/assets/css/module-css/footer.css
@@ -228,7 +228,7 @@
 
 @media only screen and (max-width: 991px){
   .footer-widget{
-    margin: 0px 0px 30px 0px !important;
+    margin: 0px 0px 20px 0px !important;
   }
 
   .main-footer .widget-section{
@@ -243,8 +243,9 @@
   }
 
   .main-footer .social-links{
-    justify-content: center;
+    justify-content: start;
     margin-top: 10px;
+    margin-bottom: 20px;
   }
 }
 
