--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,7 +495,7 @@ html.lenis {
   line-height: 30px;
   font-weight: 500;
   font-family: var(--title-font);
-  color: var(--title-color);
+  color: var(--title-color) !important  ;
   text-align: center;
   border-radius: 50px;
   padding: 15px 40px;
@@ -1428,8 +1428,8 @@ button.ltr {
 }
 
 .banner-btn{
-  background: var(--secondary-color);
-  color: #fff;
+  background: #fff;
+  color: #000;
 }
 
 .banner-btn:hover,
