--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1628,7 +1628,7 @@ textarea {
   position: relative;
   overflow: hidden;
   padding: 15px 30px;
-  background-color: var(--rr-theme-primary);
+  background-color:var(--rr-heading-primary);
   z-index: 5;
 }
 .rr-btn:focus {
@@ -7520,7 +7520,9 @@ body .ui-tooltip {
   width: 100%;
   height: 100%;
   z-index: 1;
+  background-color: rgba(0, 0, 0, 0.4); /* Adjust opacity for darker or lighter mask */
 }
+
 .banner__sub-title {
   color: var(--rr-common-white);
   font-family: var(--rr-ff-subtitle);
@@ -7540,7 +7542,7 @@ body .ui-tooltip {
   margin-bottom: 35px;
 }
 .banner__title span {
-  color: var(--rr-theme-primary);
+  color: var(--rr-text-secondary);
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .banner__title {
@@ -9178,7 +9180,7 @@ body .ui-tooltip {
 }
 .latest-blog__item-text {
   padding: 20px 40px 40px;
-  border: 1px solid #E3DBD8;
+  border: 0px solid #E3DBD8;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   border-top: none;
@@ -10280,7 +10282,7 @@ body .ui-tooltip {
 }
 
 .footer-wrap {
-  padding: 80px 0 80px 0;
+  padding: 50px 0 50px 0;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .footer-wrap {
